# Multimodal-Fashion-Retrival-System

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
config/: settings.yaml
data/processed/: manifest.json
src/: main.py
src/indexer/: core.py  extractors.py  storage.py
src/retriever/: __init__.py  core.py  reranker.py  search.py
src/utils/: __init__.py  evaluator.py  helpers.py  logger.py
tests/: __init__.py  test_evaluator.py
