[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fashion-context-retrieval"
version = "1.0.0"
description = "Multimodal Fashion & Context Retrieval System"
authors = [{name = "ML Engineering Team"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.30.0",
    "fashion-clip>=0.2.0",
    "faiss-cpu>=1.7.4",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "jsonlines>=3.1.0",
    "sqlite3-utils>=3.1",
]

[project.optional-dependencies]
test = ["pytest>=7.4.0", "pytest-cov>=4.1.0"]
gpu = ["torch==2.0.0+cu118", "faiss-gpu>=1.7.4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"